# ti4-manual

./: .gitignore  DESIGN_ETHOS.md  Makefile  main.py  pyproject.toml  requirements.txt
src/engine/actions/: tactical_action.py
src/engine/core/: command.py  event.py  game_engine.py  game_session.py  game_state.py  invariants.py  player.py  rules_engine.py  rules_library.py  ti4_rules_engine.py
src/engine/strategy_cards/: __init__.py
src/engine/tokens/: __init__.py
src/engine/turns/: end_turn.py  pass_action.py
tests/: conftest.py
tests/test_engine/test_core/: common.py  test_game_core_properties.py  test_game_engine.py
tests/test_engine/test_lrr/: common.py  test_3_action_phase.py  test_48_initiative_order.py  test_89_tactical_action.py
tests/test_engine/test_turns/: test_action_phase_end_turn.py
ti4_manual.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
