[project]
name = "ti4-manual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.ruff]
    line-length = 100
    target-version = "py314"
    exclude = ["__pycache__", ".venv", "build", "dist", "ti4_manual.egg-info"]

[tool.isort]
    select = ["E", "F", "W", "C90", "I"]  # E/W/F = pyflakes/flake8-like, I = isort codes
    ignore = ["E203"]                      # example: compatible with Black
    extend-select = ["B"]                   # optional: add bugbear rules
    profile = "ruff"
    line_length = 100


