[project]
name = "ti4-manual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
    "hypothesis",
    "numpy",
]

[tool.ruff]
    line-length = 100
    target-version = "py314"
    exclude = ["__pycache__", ".venv", "build", "dist", "ti4_manual.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "B"]  # E/W/F = pyflakes/flake8-like, I = isort codes, B = bugbear
ignore = ["E203"]


